# opengl-test

./: .gitignore  .gitigonre  CMakeLists.txt  README.md  main.cpp  test  test.cpp
include/: colortxt.h  colortxt.hpp  glerror.hpp  logger.hpp  readfile.hpp
learning-cpp/: curr_ver.cpp  inits  inits.cpp  pointers  pointers.c  pointers.cpp
resources/shaders/triangle_shaders/: triangle.frag  triangle.vert
src/: coloredtext.cpp  glerror.cpp  logger.cpp  main.cpp  readfile.cpp
src/glad/: glad.c  glad.h
xtra/: setup_opengl.cpp
